# MPoL

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.md  VERSION  api.html  background.html  changelog.html  developer-documentation.html  genindex.html  index.html  installation.html  issue36_plan.txt  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  rml_intro.html  search.html  searchindex.js  setup.py  test_setup.txt  test_setup2.txt  units-and-conventions.html  usage.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  docs-build-deploy.yml  docs.yml  docs_build.yml  draft-pdf.yml  gh_docs.yml  package.yml  pre-release.yml  pythonpackage.yml  release.yml  rtd_docs.yml  tests.yml  verify-tests-and-docs.yml
_modules/: index.html
_modules/mpol/: connectors.html  coordinates.html  crossval.html  datasets.html  fourier.html  geometry.html  gridding.html  images.html  losses.html  onedim.html  plot.html  precomposed.html  training.html  utils.html
_sources/: api.rst  api.rst.txt  changelog.md  changelog.md.txt  changelog.rst.txt  developer-documentation.md  developer-documentation.md.txt  developer-documentation.rst.txt  index.md  index.rst.txt  installation.rst.txt  units-and-conventions.md  units-and-conventions.rst.txt
_sources/ci-tutorials/: PyTorch.ipynb.txt  PyTorch.md  PyTorch.md.txt  crossvalidation.ipynb.txt  crossvalidation.md.txt  fakedata.md  fakedata.md.txt  gridder.ipynb.txt  gridder.md  gridder.md.txt  initializedirtyimage.ipynb.txt  initializedirtyimage.md  initializedirtyimage.md.txt  loose-visibilities.md.txt  optimization.ipynb.txt  optimization.md.txt
_sources/large-tutorials/: HD143006_Part_1.ipynb.txt  HD143006_part_1.ipynb.txt  HD143006_part_2.ipynb.txt
_sources/tutorials/: PyTorch.ipynb.txt  crossvalidation.ipynb.txt  gridder.ipynb.txt  initializedirtyimage.ipynb.txt  notebook_setup.ipynb.txt  optimization.ipynb.txt
_static/: documentation_options.js
_static/fftshift/src/: plot.py
_static/mmd/: SimpleNet.mmd
_static/mmd/src/: BaseCube.mmd  ImageCube.mmd  Parametric.mmd  SimpleNet.mmd  SkyModel.mmd
api/: analysis.html  coordinates.html  crossval.html  datasets.html  fourier.html  geometry.html  gridding.html  images.html  losses.html  plotting.html  precomposed.html  train_test.html  utilities.html
ci-tutorials/: PyTorch.html  PyTorch.ipynb  crossvalidation.html  crossvalidation.ipynb  fakedata.html  gpu_setup.html  gridder.html  gridder.ipynb  initializedirtyimage.html  initializedirtyimage.ipynb  loose-visibilities.html  optimization.html  optimization.ipynb
docs/: Makefile  api.md  api.md.backup  api.rst  background.md  build_html.sh  changelog.md  changelog.rst  conf.py  developer-documentation.md  developer-documentation.rst  download_external_files.py  index.md  index.rst  installation.md  installation.rst  introduction.md  requirements.txt  rml_intro.md  rml_intro.rst  testfile  units-and-conventions.md  units-and-conventions.rst  usage.rst
docs/_static/: bullets.css
docs/_static/baselines/src/: print_conversions.py
docs/_static/fftshift/src/: plot.py
docs/_static/mmd/src/: BaseCube.mmd  GriddedNet.mmd  SimpleNet.mmd  SingleDish.mmd  (+1 more)
docs/api/: analysis.md  coordinates.md  crossval.md  datasets.md  fourier.md  geometry.md  gridding.md  images.md  losses.md  plotting.md  precomposed.md  train_test.md  utilities.md
docs/ci-tutorials/: PyTorch.md  PyTorch.py  crossvalidation.md  crossvalidation.py  fakedata.md  gpu_setup.rst  gridder.md  gridder.py  initializedirtyimage.md  initializedirtyimage.py  loose-visibilities.md  notebook_setup.py  optimization.md  optimization.py
docs/large-tutorials/: HD143006_Part_1.py  HD143006_part_1.ipynb  HD143006_part_1.md  HD143006_part_1.py  HD143006_part_2.ipynb  HD143006_part_2.md  HD143006_part_2.py  Makefile  crossvalidation.ipynb  crossvalidation.py  notebook_setup.py  pyro.ipynb  pyro.md
docs/tutorials/: HD143006_Part_1.py  HD143006_Part_2.ipynb  HD143006_Part_2.py  HD143006_Tut_P1.py  PyTorch.py  crossvalidation.py  gpu_setup.rst  gpu_setup_tutorial.rst  gridder.py  initializedirtyimage.py  model.pt  notebook_setup.py  optimization.py
examples/HD143006/: common_data.py  common_functions.py  crossvalidate.pbs  crossvalidate.py  dirty_image.py  optimize_to_dirty_image.py  train.pbs  train_and_image.py
large-tutorials/: HD143006_Part_1.html  HD143006_part_1.html  HD143006_part_2.html  HD143006_part_2.ipynb  crossvalidation.html  pyro.html
mpol/: __init__.py  constants.py  datasets.py  dirty_image.py  gridding.py  images.py  losses.py  utils.py
paper/: .gitignore  paper.bib  paper.md
runs/May30_21-03-47_Hannahs-MacBook-Air.local/: events.out.tfevents.1622423027.Hannahs-MacBook-Air.local.17844.0
src/mpol/: __init__.py  connectors.py  constants.py  coordinates.py  crossval.py  datasets.py  default_parameters.json  dirty_image.py  exceptions.py  fit.py  fourier.py  geometry.py  gridding.py  images.py  input_output.py  losses.py  onedim.py  parameter_descriptions.json  plot.py  precomposed.py  primary_beam.py  protocols.py  spheroidal_gridding.py  tests.mplstyle  train_test.py  training.py  utils.py
test/: GPU_SLURM.sh  README.md  conftest.py  connectors_test.py  coordinates_test.py  crossval_test.py  datasets_test.py  fft_units_test.py  fftshift_test.py  fourier_test.py  geometry_test.py  gridder_dataset_export_test.py  gridder_gridding_test.py  gridder_imager_test.py  gridder_init_test.py  gridder_test.py  gridding_test.py  images_test.py  input_output_test.py  losses_test.py  onedim_test.py  plot_test.py  plot_utils.py  primary_beam_test.py  spheroidal_gridding_test.py  test_fftshift.py  test_gridding.py  train_test.py  train_test_test.py  utils_test.py
tutorials/: PyTorch.html  PyTorch.ipynb  crossvalidation.html  crossvalidation.ipynb  gpu_setup.html  gridder.html  gridder.ipynb  initializedirtyimage.html  initializedirtyimage.ipynb  notebook_setup.html  notebook_setup.ipynb  optimization.html  optimization.ipynb
(+3 files in other folders)
